--- a/style/sobre_mi.scss
+++ b/style/sobre_mi.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&family=Montserrat:ital,wght@0,300;0,400;1,200&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;1,100;1,300&display=swap');
 
 $color1:#131212;
 $color2:#ffffff;
@@ -7,10 +7,9 @@ $color3:#808080;
 $color4:#232323;
 $color5:#262525;
 
-
-$font1: "Montserrat', sans-serif";
+$font1: 'Montserrat', sans-serif;
 $font2: uppercase;
-
+$font3: 'Times New Roman', Times, serif;
 
 *{
     padding: 0px;
@@ -22,7 +21,6 @@ $font2: uppercase;
     height: 170px;
     width: 100%;
     background-color: $color1;
-    
 }
 
 #logo{
@@ -61,8 +59,8 @@ nav a {
     text-decoration: none !important;
     color: $color2;
     font-size: 23px;
-    text-transform: uppercase;
-    font-family: "Montserrat', sans-serif";
+    text-transform: $font2;
+    font-family:$font3;
     text-shadow: 1px 2px 2px $color1;
 }
 
@@ -98,7 +96,7 @@ nav a:hover{
 .texto1{
     color: $color2;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: $font1;
     padding: 35px;
 }
 
@@ -111,60 +109,51 @@ nav a:hover{
 
 .foot{
     width: 100%;
-    background-color: #131212;
+    background-color: $color1;
     overflow: hidden;
-    font-family: "Montserrat', sans-serif";
-}
-
-.foot .cajaDatos{
-    width: 95%;
-    max-width: 100%; 
-    margin: auto; 
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-    padding: 5px 10px;
-}
-
-.foot .cajaDatos .cajaIco ul li{
-    list-style: none;
-    display: inline-block;
-    
-}
-
-.foot .cajaDatos .cajaDatos1 .datos{
-    display: flex;
-    flex-flow: wrap row;
-    justify-content: left;
-    margin-top: -16px;
-}
-
-
-.foot .cajaIco{
-    display: flex;
-    flex-flow: wrap row;
-    justify-content: right;
-    grid-column: 3/4;
+    font-family: $font1;
+    .cajaDatos{
+            width: 95%;
+            margin: auto; 
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-gap: 10px;
+            padding: 5px 10px;
+            .cajaIco ul li{
+                list-style: none;
+                display: inline-block;
+            }
+            .cajaCopy{
+                text-align: center;
+                color: $color2;
+                grid-column: 2/3;
+                font-size: 13px;
+                margin-bottom: -15px;
+            }
+            .cajaDatos1 .datos{
+                display: flex;
+                flex-flow: wrap row;
+                justify-content: space-between;
+                width: 70%;
+                margin-top: -16px;
+                font-size: 13px;
+            }
+            .cajaIco{
+                grid-column: 3/4;
+                justify-self: end;
+            }
+        }
 }
 
 .cajaDatos .cajaDatos1 p a{
     text-decoration: none;
-    color: #fff;
-    margin-right: 15px;
+    color: $color2;
+    margin-right: 0px;
 }
-
-.foot .cajaDatos .cajaCopy{
-    text-align: center;
-    padding: 5px 0px;
-    color: #fff;
-    grid-column: 2/3;
-    font-size: 13px;
-    margin-bottom: -15px;
-}
-
 
 .nombre{
-    color: #fff;
+    color: $color2;
+    font-size: 13px;
 }
 
 /* fin css footer */
@@ -262,22 +251,20 @@ nav ul{
 
 /* inicio media query footer */
 
-.foot .cajaIco{
-    display: grid;
-    flex-flow: wrap row;
-    justify-content: right;
+.foot {
+    .cajaIco{
+        display: grid;
+        flex-flow: wrap row;
+        justify-content: right;
+    }
+    .cajaDatos .cajaCopy{
+        padding-top: 15px;
+        font-size: 14px;
+    }
 }
 
-.foot .cajaDatos .cajaCopy{
-    padding-top: 15px;
-    font-size: 14px;
-    
-}
 /* fin media query footer */
 }
-
-
-
 
 @media only screen and (max-width: 930px){
 
@@ -312,15 +299,12 @@ nav ul{
 .mainSobreMi{
     display: grid;
     grid-template-rows: repeat(2, 1fr);
-    height: auto;
-    
+    height: 1400px;
 }
 
 .cajaMain{
     width: 100%;
 }
-
-
 
 .fotoMia{
     width: 99%;
@@ -342,36 +326,32 @@ nav ul{
 /*inicio footer query  */
 
 
-.foot .cajaDatos{
+.foot{ 
+    .cajaDatos{
     display: flex;
     flex-flow: wrap column;
     justify-content: center;
+        .cajaDatos1{
+            text-align: center;
+            .datos{
+                padding-top: 5px;
+                display: flex;
+                flex-flow: wrap column;
+                width: 100%;
+            }
+        }
+        .cajaIco{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .cajaCopy{
+            padding-top: 10px;
+            font-size: 13px;
+        }
+    }
 }
 
-.foot .cajaDatos .cajaDatos1{
-    text-align: center;
-}
-
-.foot .cajaDatos .cajaDatos1 .nombre{
-    margin-right: 5px;
-}
-
-.foot .cajaDatos .cajaDatos1 .datos{
-    padding-top: 5px;
-    display: flex;
-    flex-flow: wrap column;
-}
-
-.foot .cajaDatos .cajaIco{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.foot .cajaDatos .cajaCopy{
-    padding-top: 10px;
-    font-size: 13px;
-}
 /* fin query footer */
 
 
@@ -446,39 +426,35 @@ header a{
 
 /* incio media query footer */
 
-.foot .cajaDatos{
-    display: flex;
-    flex-flow: wrap column;
-    justify-content: center;
+.foot{ 
+    .cajaDatos{
+        display: flex;
+        flex-flow: wrap column;
+        justify-content: center;
+        .cajaDatos1 .datos{
+            display: flex;
+            flex-flow: wrap column;
+        }
+        .cajaIco{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .cajaCopy{
+            padding-top: 10px;
+            font-size: 13px;
+        }
+    }
 }
 
-
-.foot .cajaDatos .cajaDatos1 .datos{
-    display: flex;
-    flex-flow: wrap column;
-}
-
-.foot .cajaDatos .cajaIco{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.foot .cajaDatos .cajaCopy{
-    padding-top: 10px;
-    font-size: 13px;
-}
 /* fin media query footer */
 }
 
 @media only screen and (max-width: 380px){
 
-
-
 .navbar{
         display: flex;
-        
-    }
+}
 
 .mainSobreMi{
     height: auto;
@@ -492,8 +468,8 @@ header a{
 }
 
 main div p{
-    margin: 0px !important;
-    padding: 0px !important;
+    margin: 10px !important;
+    padding: 10px !important;
 }
 
 .mainSobreMi .fotoMia{
@@ -504,13 +480,9 @@ main div p{
     border: solid white;
 }
 
-
-
 }
 
 @media only screen and (max-width: 321px){
-
-
 
 .mainSobreMi{
     height: auto;
@@ -534,12 +506,10 @@ main div p{
 
 main div p{
     margin: 0px 0px 0px 0px !important;
-    padding: 20px 0px 0px 0px !important;
+    padding: 5px 20px 20px 20px !important;
     width: 100%;
     font-size: 0.90em !important;
 }
-
-
 
 }
 
