--- a/style/experiencia.css
+++ b/style/experiencia.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&family=Montserrat:ital,wght@0,300;0,400;1,200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;1,100;1,300&display=swap");
 * {
   padding: 0px;
   margin: 0px;
@@ -61,8 +62,8 @@ nav a {
   color: #fff;
   font-size: 23px;
   text-transform: uppercase;
-  font-family: "Montserrat', sans-serif";
-  text-shadow: 1px 2px 2px grey;
+  font-family: "Times New Roman", Times, serif;
+  text-shadow: 1px 2px 2px #131212;
 }
 
 nav a:hover {
@@ -130,13 +131,13 @@ nav a:hover {
 h2 {
   color: #fff;
   font-size: 35px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .mainExperiencia p {
   color: #fff;
   font-size: 20px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .mainExperiencia h2 {
@@ -170,12 +171,11 @@ h2 {
   width: 100%;
   background-color: #131212;
   overflow: hidden;
-  font-family: "Montserrat', sans-serif";
+  font-family: "Montserrat", sans-serif;
 }
 
 .foot .cajaDatos {
   width: 95%;
-  max-width: 100%;
   margin: auto;
   display: -ms-grid;
   display: grid;
@@ -190,6 +190,16 @@ h2 {
   display: inline-block;
 }
 
+.foot .cajaDatos .cajaCopy {
+  text-align: center;
+  color: #ffffff;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  font-size: 13px;
+  margin-bottom: -15px;
+}
+
 .foot .cajaDatos .cajaDatos1 .datos {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -198,53 +208,54 @@ h2 {
   -webkit-box-direction: normal;
       -ms-flex-flow: wrap row;
           flex-flow: wrap row;
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 70%;
   margin-top: -16px;
+  font-size: 13px;
 }
 
-.foot .cajaIco {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: wrap row;
-          flex-flow: wrap row;
-  -webkit-box-pack: right;
-      -ms-flex-pack: right;
-          justify-content: right;
+.foot .cajaDatos .cajaIco {
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
   grid-column: 3/4;
+  -ms-grid-column-align: end;
+      justify-self: end;
 }
 
 .cajaDatos .cajaDatos1 p a {
   text-decoration: none;
-  color: #fff;
-  margin-right: 15px;
-}
-
-.foot .cajaDatos .cajaCopy {
-  text-align: center;
-  padding: 5px 0px;
-  color: #fff;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
-  font-size: 17px;
-  margin-bottom: -15px;
+  color: #ffffff;
+  margin-right: 0px;
 }
 
 .nombre {
-  color: #fff;
+  color: #ffffff;
+  font-size: 13px;
 }
 
 /* fin css footer */
 /* -----inicio media query---------- */
 /* -----inicio media query---------- */
-@media only screen and (min-width: 1025px) {
+@media only screen and (min-width: 1421px) {
+  header a img {
+    width: 440px;
+    height: 110px;
+  }
+  #logo {
+    height: 60%;
+    padding-top: 15px;
+  }
+  .headerOficial {
+    height: 170px;
+  }
+  nav ul {
+    padding-top: 5px;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1420px) {
   .headerOficial {
     height: 170px;
   }
@@ -363,9 +374,6 @@ h2 {
   .foot .cajaDatos .cajaDatos1 {
     text-align: center;
   }
-  .foot .cajaDatos .cajaDatos1 .nombre {
-    margin-right: 5px;
-  }
   .foot .cajaDatos .cajaDatos1 .datos {
     padding-top: 5px;
     display: -webkit-box;
@@ -375,6 +383,7 @@ h2 {
     -webkit-box-direction: normal;
         -ms-flex-flow: wrap column;
             flex-flow: wrap column;
+    width: 100%;
   }
   .foot .cajaDatos .cajaIco {
     display: -webkit-box;
@@ -385,7 +394,6 @@ h2 {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    padding-top: 15px;
   }
   .foot .cajaDatos .cajaCopy {
     padding-top: 10px;
@@ -469,14 +477,7 @@ h2 {
         -ms-flex-pack: center;
             justify-content: center;
   }
-  .foot .cajaDatos .cajaDatos1 {
-    text-align: center;
-  }
-  .foot .cajaDatos .cajaDatos1 .nombre {
-    margin-right: 5px;
-  }
   .foot .cajaDatos .cajaDatos1 .datos {
-    padding-top: 5px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -494,7 +495,6 @@ h2 {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    padding-top: 15px;
   }
   .foot .cajaDatos .cajaCopy {
     padding-top: 10px;
