--- a/style/experiencia.scss
+++ b/style/experiencia.scss
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&family=Montserrat:ital,wght@0,300;0,400;1,200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;1,100;1,300&display=swap');
 
+$color1:#131212;
+$color2:#ffffff;
+$color3:#808080;
+$color4:#232323;
+$color5:#262525;
+
+$font1: 'Montserrat', sans-serif;
+$font2: uppercase;
+$font3: 'Times New Roman', Times, serif;
 
 
 
@@ -12,7 +22,7 @@
 .headerOficial{
     height: 170px;
     width: 100%;
-    background-color: #131212;
+    background-color: $color1;
 
 }
 
@@ -53,13 +63,13 @@ nav a {
     text-decoration: none !important;
     color: #fff;
     font-size: 23px;
-    text-transform: uppercase;
-    font-family: "Montserrat', sans-serif";
-    text-shadow: 1px 2px 2px grey;
+    text-transform: $font2;
+    font-family: $font3;
+    text-shadow: 1px 2px 2px $color1;
 }
 
 nav a:hover{
-    color: #808080;
+    color: $color3;
 }
 
 /* fin css header nav */
@@ -69,7 +79,7 @@ nav a:hover{
 .mainExperiencia {
     height: 200vh;
     width: 100%;
-    background-color: #262525;
+    background-color: $color5;
     display: grid; 
     grid-template-columns: 1fr 1fr; 
     grid-template-rows: 1fr 1fr 1fr; 
@@ -102,14 +112,14 @@ nav a:hover{
 h2{
     color: #fff;
     font-size: 35px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: $font1;
 
 }
 
 .mainExperiencia p{
     color: #fff;
     font-size: 20px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: $font1;
 }
 
 .mainExperiencia h2{
@@ -127,10 +137,6 @@ h2{
     padding: 20px;
 }
 
-
-
-
-
 /* fin css main experiencia */
 
 
@@ -138,59 +144,51 @@ h2{
 
 .foot{
     width: 100%;
-    background-color: #131212;
+    background-color: $color1;
     overflow: hidden;
-    font-family: "Montserrat', sans-serif";
-}
-
-.foot .cajaDatos{
-    width: 95%;
-    max-width: 100%; 
-    margin: auto; 
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-    padding: 5px 10px;
-}
-
-.foot .cajaDatos .cajaIco ul li{
-    list-style: none;
-    display: inline-block;
-}
-
-.foot .cajaDatos .cajaDatos1 .datos{
-    display: flex;
-    flex-flow: wrap row;
-    justify-content: left;
-    margin-top: -16px;
-}
-
-
-.foot .cajaIco{
-    display: flex;
-    flex-flow: wrap row;
-    justify-content: right;
-    grid-column: 3/4;
+    font-family: $font1;
+    .cajaDatos{
+            width: 95%;
+            margin: auto; 
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-gap: 10px;
+            padding: 5px 10px;
+            .cajaIco ul li{
+                list-style: none;
+                display: inline-block;
+            }
+            .cajaCopy{
+                text-align: center;
+                color: $color2;
+                grid-column: 2/3;
+                font-size: 13px;
+                margin-bottom: -15px;
+            }
+            .cajaDatos1 .datos{
+                display: flex;
+                flex-flow: wrap row;
+                justify-content: space-between;
+                width: 70%;
+                margin-top: -16px;
+                font-size: 13px;
+            }
+            .cajaIco{
+                grid-column: 3/4;
+                justify-self: end;
+            }
+        }
 }
 
 .cajaDatos .cajaDatos1 p a{
     text-decoration: none;
-    color: #fff;
-    margin-right: 15px;
+    color: $color2;
+    margin-right: 0px;
 }
-
-.foot .cajaDatos .cajaCopy{
-    text-align: center;
-    padding: 5px 0px;
-    color: #fff;
-    grid-column: 2/3;
-    font-size: 17px;
-    margin-bottom: -15px;
-}
-
 
 .nombre{
-    color: #fff;
+    color: $color2;
+    font-size: 13px;
 }
 
 /* fin css footer */
@@ -198,7 +196,27 @@ h2{
 /* -----inicio media query---------- */
 /* -----inicio media query---------- */
 
-@media only screen and (min-width: 1025px){
+@media only screen and (min-width: 1421px){
+
+    header a img{
+        width: 440px;
+        height: 110px;
+    }
+    
+    #logo{
+        height: 60%;
+        padding-top: 15px;
+    }
+    
+    .headerOficial{
+        height: 170px;
+    }
+    nav ul{
+        padding-top: 5px;
+    }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1420px){
 
 .headerOficial{
     height: 170px;
@@ -242,24 +260,22 @@ nav ul{
 
 /* inicio media query footer */
 
-.foot .cajaIco{
-    display: grid;
-    flex-flow: wrap row;
-    justify-content: right;
+.foot{ 
+    .cajaIco{
+        display: grid;
+        flex-flow: wrap row;
+        justify-content: right;
+    }
+    .cajaDatos .cajaCopy{
+        padding-top: 15px;
+        font-size: 14px;
+    }
 }
 
-.foot .cajaDatos .cajaCopy{
-    padding-top: 15px;
-    font-size: 14px;
-}
 /* fin media query footer */
 }
 
-
-
-
 @media only screen and (max-width: 930px){
-
 
 /* inicio media query header */
     
@@ -288,7 +304,6 @@ nav ul{
 
 .mainExperiencia{
     height: auto;
-    
 }
 
 .foto7{
@@ -316,48 +331,38 @@ nav ul{
 
 .textoMi h2{
     text-align: center;
-    }
-
+}
 
 /*inicio footer query  */
 
-
-.foot .cajaDatos{
+.foot{ 
+    .cajaDatos{
     display: flex;
     flex-flow: wrap column;
     justify-content: center;
-}
-
-.foot .cajaDatos .cajaDatos1{
-    text-align: center;
-}
-
-.foot .cajaDatos .cajaDatos1 .nombre{
-    margin-right: 5px;
-}
-
-.foot .cajaDatos .cajaDatos1 .datos{
-    padding-top: 5px;
-    display: flex;
-    flex-flow: wrap column;
-}
-
-.foot .cajaDatos .cajaIco{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-top: 15px;
-}
-
-.foot .cajaDatos .cajaCopy{
-    padding-top: 10px;
-    font-size: 13px;
+        .cajaDatos1{
+            text-align: center;
+            .datos{
+                padding-top: 5px;
+                display: flex;
+                flex-flow: wrap column;
+                width: 100%;
+            }
+        }
+        .cajaIco{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .cajaCopy{
+            padding-top: 10px;
+            font-size: 13px;
+        }
+    }
 }
 /* fin query footer */
 
-
 }
-
 
 
 @media only screen and (max-width: 500px){
@@ -436,36 +441,25 @@ header a{
 
 /* incio media query footer */
 
-.foot .cajaDatos{
-    display: flex;
-    flex-flow: wrap column;
-    justify-content: center;
-}
-
-.foot .cajaDatos .cajaDatos1{
-    text-align: center;
-}
-
-.foot .cajaDatos .cajaDatos1 .nombre{
-    margin-right: 5px;
-}
-
-.foot .cajaDatos .cajaDatos1 .datos{
-    padding-top: 5px;
-    display: flex;
-    flex-flow: wrap column;
-}
-
-.foot .cajaDatos .cajaIco{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-top: 15px;
-}
-
-.foot .cajaDatos .cajaCopy{
-    padding-top: 10px;
-    font-size: 13px;
+.foot{ 
+    .cajaDatos{
+        display: flex;
+        flex-flow: wrap column;
+        justify-content: center;
+        .cajaDatos1 .datos{
+            display: flex;
+            flex-flow: wrap column;
+        }
+        .cajaIco{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .cajaCopy{
+            padding-top: 10px;
+            font-size: 13px;
+        }
+    }
 }
 /* fin media query footer */
 }
@@ -474,13 +468,10 @@ header a{
 
 .navbar{
     display: flex;
-    
 }
-
 
 .mainExperiencia{
     height: auto;
 }
-
 
 }
