--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&family=Montserrat:ital,wght@0,300;0,400;1,200&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400|Poppins:300,400,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;1,100;1,300&display=swap");
 * {
   padding: 0px;
   margin: 0px;
@@ -60,7 +61,7 @@ nav ul li a {
   color: #ffffff;
   font-size: 23px;
   text-transform: uppercase;
-  font-family: "Montserrat', sans-serif";
+  font-family: "Times New Roman", Times, serif;
   text-shadow: 1px 2px 2px #131212;
 }
 
@@ -89,7 +90,7 @@ nav a:hover {
   width: 100%;
   background-color: #131212;
   overflow: hidden;
-  font-family: "Montserrat', sans-serif";
+  font-family: "Montserrat", sans-serif;
 }
 
 .foot .cajaDatos {
@@ -114,7 +115,7 @@ nav a:hover {
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2/3;
-  font-size: 17px;
+  font-size: 13px;
   margin-bottom: -15px;
 }
 
@@ -131,6 +132,7 @@ nav a:hover {
           justify-content: space-between;
   width: 70%;
   margin-top: -16px;
+  font-size: 13px;
 }
 
 .foot .cajaDatos .cajaIco {
