--- a/style/sobre_mi.css
+++ b/style/sobre_mi.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&family=Montserrat:ital,wght@0,300;0,400;1,200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;1,100;1,300&display=swap");
 * {
   padding: 0px;
   margin: 0px;
@@ -61,7 +62,7 @@ nav a {
   color: #ffffff;
   font-size: 23px;
   text-transform: uppercase;
-  font-family: "Montserrat', sans-serif";
+  font-family: "Times New Roman", Times, serif;
   text-shadow: 1px 2px 2px #131212;
 }
 
@@ -107,7 +108,7 @@ nav a:hover {
 .texto1 {
   color: #ffffff;
   text-align: center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   padding: 35px;
 }
 
@@ -120,12 +121,11 @@ nav a:hover {
   width: 100%;
   background-color: #131212;
   overflow: hidden;
-  font-family: "Montserrat', sans-serif";
+  font-family: "Montserrat", sans-serif;
 }
 
 .foot .cajaDatos {
   width: 95%;
-  max-width: 100%;
   margin: auto;
   display: -ms-grid;
   display: grid;
@@ -140,6 +140,16 @@ nav a:hover {
   display: inline-block;
 }
 
+.foot .cajaDatos .cajaCopy {
+  text-align: center;
+  color: #ffffff;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  font-size: 13px;
+  margin-bottom: -15px;
+}
+
 .foot .cajaDatos .cajaDatos1 .datos {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -148,47 +158,31 @@ nav a:hover {
   -webkit-box-direction: normal;
       -ms-flex-flow: wrap row;
           flex-flow: wrap row;
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 70%;
   margin-top: -16px;
+  font-size: 13px;
 }
 
-.foot .cajaIco {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: wrap row;
-          flex-flow: wrap row;
-  -webkit-box-pack: right;
-      -ms-flex-pack: right;
-          justify-content: right;
+.foot .cajaDatos .cajaIco {
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
   grid-column: 3/4;
+  -ms-grid-column-align: end;
+      justify-self: end;
 }
 
 .cajaDatos .cajaDatos1 p a {
   text-decoration: none;
-  color: #fff;
-  margin-right: 15px;
-}
-
-.foot .cajaDatos .cajaCopy {
-  text-align: center;
-  padding: 5px 0px;
-  color: #fff;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
-  font-size: 13px;
-  margin-bottom: -15px;
+  color: #ffffff;
+  margin-right: 0px;
 }
 
 .nombre {
-  color: #fff;
+  color: #ffffff;
+  font-size: 13px;
 }
 
 /* fin css footer */
@@ -333,7 +327,7 @@ nav a:hover {
     display: grid;
     -ms-grid-rows: (1fr)[2];
         grid-template-rows: repeat(2, 1fr);
-    height: auto;
+    height: 1400px;
   }
   .cajaMain {
     width: 100%;
@@ -372,9 +366,6 @@ nav a:hover {
   .foot .cajaDatos .cajaDatos1 {
     text-align: center;
   }
-  .foot .cajaDatos .cajaDatos1 .nombre {
-    margin-right: 5px;
-  }
   .foot .cajaDatos .cajaDatos1 .datos {
     padding-top: 5px;
     display: -webkit-box;
@@ -384,6 +375,7 @@ nav a:hover {
     -webkit-box-direction: normal;
         -ms-flex-flow: wrap column;
             flex-flow: wrap column;
+    width: 100%;
   }
   .foot .cajaDatos .cajaIco {
     display: -webkit-box;
@@ -511,8 +503,8 @@ nav a:hover {
     padding: 20px 0px 0px !important;
   }
   main div p {
-    margin: 0px !important;
-    padding: 0px !important;
+    margin: 10px !important;
+    padding: 10px !important;
   }
   .mainSobreMi .fotoMia {
     padding: 10px;
@@ -544,7 +536,7 @@ nav a:hover {
   }
   main div p {
     margin: 0px 0px 0px 0px !important;
-    padding: 20px 0px 0px 0px !important;
+    padding: 5px 20px 20px 20px !important;
     width: 100%;
     font-size: 0.90em !important;
   }
